Add update endpoint for software statement
